--- a/front/src/components/Pages/UProfile/Ucalendar/Ucalendar.css
+++ b/front/src/components/Pages/UProfile/Ucalendar/Ucalendar.css
@@ -79,13 +79,9 @@
 
 .profile.dark-mode .rbc-today {
 	border-radius: 10px;
-	padding: 10px;
-	background: transparent;
 	transition: border 0.2s ease-in-out;
-}
-
-.profile.dark-mode .rbc-today:hover {
-	background: transparent !important;
+	background: transparent;
+	background: rgba(255, 166, 0, 0.209);
 }
 
 .profile.dark-mode .rbc-today:hover {
