--- a/front/src/components/Pages/UProfile/Profile.css
+++ b/front/src/components/Pages/UProfile/Profile.css
@@ -394,8 +394,14 @@
 	font-size: 20px;
 	display: flex;
 	align-items: center;
-	background-color: rgba(189, 189, 189, 0.601);
+	background-color: rgba(152, 152, 152, 0.395);
 	border-radius: 4px;
+	transition: background 0.2s ease-in-out;
+	cursor: pointer;
+}
+
+.profile.dark-mode .profile__show-aside-btn:hover:not(:focus-visible) {
+	background-color: rgba(240, 240, 240, 0.853);
 }
 
 .profile.dark-mode .profile__show-aside-btn svg {
