--- a/front/src/components/Pages/UProfile/Udetails/Udetails.css
+++ b/front/src/components/Pages/UProfile/Udetails/Udetails.css
@@ -39,7 +39,6 @@
 	cursor: pointer;
 }
 
-
 .dark-mode-btn::before {
 	content: "☀️";
 	font-size: 24px;
@@ -88,6 +87,7 @@
 		rgb(32, 38, 57) 11.4%,
 		rgb(63, 76, 119) 70.2%
 	);
+	box-shadow: 0px 2px 8px rgba(143, 143, 143, 0.174);
 }
 /* darkMode */
 
