--- a/front/src/components/UI/DarkMode-Switcher/DarkModeSwitcher.css
+++ b/front/src/components/UI/DarkMode-Switcher/DarkModeSwitcher.css
@@ -13,9 +13,9 @@ body[data-theme="night"] {
 /* Контейнер переключателя */
 .switcher__content {
 	position: relative;
-	display: inline-block;
-	width: 140px;
-	height: 70px;
+
+	min-height: 35px;
+	min-width: 100px;
 	background: #ddd;
 	border-radius: 35px;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
@@ -31,6 +31,7 @@ body[data-theme="night"] {
 .switcher__toggle.light .switcher__content {
 	background-image: url("../../../assets/sun-darkMode2.png");
 	background-size: cover;
+	background-position: 6px 27%;
 }
 
 .switcher__toggle.dark .switcher__content {
@@ -53,15 +54,17 @@ body[data-theme="night"] {
 
 .slider {
 	position: absolute;
-	top: 15px;
-	left: 15px;
-	max-width: 40px;
+	top: 5px;
+	left: 3px;
+	max-width: 23px;
 	width: 100%;
-	min-height: 40px;
+	min-height: 23px;
 	background: rgba(255, 255, 255, 0.498);
 	border-radius: 50%;
 	transition: transform 0.4s ease;
 	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+	/* min-height: 40px; */
+	/* max-width: 40px; */
 }
 
 .slider:hover:not(:focus-visible) {
