--- a/front/src/components/Pages/UProfile/Profile.css
+++ b/front/src/components/Pages/UProfile/Profile.css
@@ -25,9 +25,9 @@
 }
 
 /* DarkMode */
-.dark-mode-btn:hover {
+/* .dark-mode-btn:hover {
 	transform: translate(0, 1.5px);
-}
+} */
 .profile.dark-mode .udetails__setting-icon {
 	fill: #fffffff0;
 }
