--- a/front/src/components/UI/DarkMode-Switcher/DarkModeSwitcher.css
+++ b/front/src/components/UI/DarkMode-Switcher/DarkModeSwitcher.css
@@ -17,7 +17,6 @@ body[data-theme="night"] {
 	min-width: 100px;
 	background: #ddd;
 	border-radius: 35px;
-	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 	transition: background 0.4s ease;
 }
 
@@ -27,6 +26,10 @@ body[data-theme="night"] {
 }
 
 .switcher__toggle.light .switcher__content {
+	position: absolute;
+	right: 27px;
+	bottom: 48%;
+
 	background-image: url("../../../assets/sun-darkMode2.png");
 	background-size: cover;
 	background-position: 6px 27%;
