--- a/front/src/components/Pages/UProfile/Udetails/Udetails.css
+++ b/front/src/components/Pages/UProfile/Udetails/Udetails.css
@@ -315,6 +315,8 @@
 .charts__bg {
 	border-radius: 20px;
 	min-height: 200px;
+	box-shadow: none;
+	box-shadow: 0px 2px 8px rgba(143, 143, 143, 0.174);
 }
 
 /* DarkMode */
